# ChordController

./: .gitignore  MANIFEST.in  README.md  pyproject.toml  requirements.txt
.github/workflows/: python-package.yml
chordcontroller/: __init__.py  config.py  config_action_parser.py  controller_input_handler.py  controller_inputs.py  desktop_outputs.py  event_listener.py  main.py  paths.py
chordcontroller/processes/: __init__.py  controller_input.py  ui.py
chordcontroller/resources/: LICENSE.txt  __init__.py
chordcontroller/widgets/: __init__.py  cheatsheet.py  controller_buttons.py  controller_overlay.py  controller_tray.py  joystick_calibration.py
